# smart-ffmpeg-android

./: .gitignore  ACTIONS_FIXED.md  ADD_DESCRIPTION_TOPICS.md  BUILDING.md  BUILD_FIXED.md  CHANGELOG.md  CHECKLIST.md  CHECK_PUBLISH_STATUS.md  CONGRATULATIONS.md  CREATE_RELEASE.md  FFMPEG_CAPABILITIES.md  FINAL_CHECKLIST.md  FINAL_RELEASE_GUIDE.md  FINAL_SUCCESS.md  FIRST_COMMIT.md  FLUTTER_INTEGRATION.md  GITHUB_README.md  INTEGRATION.md  INTEGRATION_GUIDE.md  JITPACK_SETUP.md  JSON_METADATA_PROPOSAL.md  LICENSE  METADATA_API_V2.md  NEXT_STEPS_JITPACK.md  NEXT_STEPS_RELEASE.md  PACKAGE_PUBLISHED.md  PLATFORM_COMPARISON.md  PRE_PUBLISH_CHECKLIST.md  PROJECT_STRUCTURE.md  PUBLISH.md  PUBLISH_COMMANDS.md  QUICK_RELEASE.md  README.md  README_GITHUB.md  README_RU.md  README_UPDATED.txt  READY_TO_PUBLISH.md  RELEASE_AUTOMATION_SUMMARY.md  RELEASE_NOTES_v1.0.4.md  RELEASE_SUCCESS.md  (+24 more)
src/main/cpp/: CMakeLists.txt  ffmpeg_bridge.cpp  ffmpeg_bridge_jni.c  jni_bridge.c
src/main/cpp/native_media_engine/ffmpeg_player/: audio_render_android.c  audio_render_android.h  audio_renderer.c  audio_renderer.h  avsync.c  avsync_gate.c  avsync_gate.h  avsync_master.c  avsync_master.h  clock.c  clock.h  ffmpeg_player.c  ffmpeg_player.h  ffmpeg_player_error.c  ffmpeg_player_error.h  ffmpeg_player_lifecycle.c  ffmpeg_player_lifecycle.h  frame_queue.c  frame_queue.h  hw_accel.c  hw_accel.h  native_player_jni.c  native_player_jni.h  native_preview.c  native_preview.h  packet_queue.c  packet_queue.h  playback_state_machine.c  playback_state_machine.h  subtitle_api.c  subtitle_api.h  (+19 more)
(+28 files in other folders)
